<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/team_a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamAHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/TeamA"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/scoreTeamA"
                android:textColor="#000000" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="displayForTeamA"
                android:text="@string/_1_run"
                android:textAllCaps="true"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/team_a_hit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="24dp"
                android:text="@string/hitTeamA"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"
                android:textColor="#000000" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="displayForTeamAHit"
                android:text="@string/_1_hit"
                android:textAllCaps="true"
                android:textColor="#FFFFFF" />
        </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/TeamB"
                android:textSize="14sp"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/scoreTeamB"
                android:textColor="#000000" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="displayForTeamB"
                android:text="@string/_1_run"
                android:textAllCaps="true"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/team_b_hit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="24dp"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/hitTeamB"
                android:textColor="#000000" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="displayForTeamBHit"
                android:text="@string/_1_hit"
                android:textAllCaps="true"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="displayForReset"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:textColor="#FFFFFF" />

</RelativeLayout>

